# HAProxyConfGen

./: .gitignore  Cargo.toml  config.example.yml
src/: main.rs
src/templates/: backend.hbs  frontend.hbs  haproxy.hbs
