[package]
name = "HAProxyConfGen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10.14", features = ["yaml"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.9.30"
clap = { version = "4.4.18", features = ["default"] }
handlebars = { version = "5.1.1", features = ["default"] }
which = "6.0.0"
env_logger = "0.11.1"
log = "0.4.20"
tempfile = "3.9.0"
